tests/ui/parser/doc-before-mod-rbrace.rs
mod Foo {
    /// document
    //~^ ERROR expected item after doc comment
}

fn main() {}
